--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,43 +5,43 @@
       <li>
         <img src="assets/child.jpg"> 
         <div class="caption center-align">
-          <h3 class="encabezado">“El mejor legado de un padre a sus hijos es un poco de su tiempo cada día”</h3>
-          <h5 class="encabezado light grey-text text-lighten-3 right-align">— Leon Battista Alberti.</h5>
+          <h3 class="encabezado" id="color1">“El mejor legado de un padre a sus hijos es un poco de su tiempo cada día”</h3>
+          <h5 id="color1" class="encabezado right-align">— Leon Battista Alberti.</h5>
         </div>
       </li>
       <li>
         <img src="assets/child2.jpg"> 
         <div class="caption left-align">
-          <h3 class="encabezado">“Estudia el pasado si quieres intuir el futuro”</h3>
-          <h5 class="encabezado light grey-text text-lighten-3 right-align">— Confucio.</h5>
+          <h3 class="encabezado" id="color2">“Estudia el pasado si quieres intuir el futuro”</h3>
+          <h5 id="color2" class="encabezado  right-align">— Confucio.</h5>
         </div>
       </li>
       <li>
         <img src="assets/child3.jpg"> 
         <div class="caption right-align">
-          <h3 class="encabezado">“Siempre se puede ser mejor”</h3>
-          <h5 class="encabezado light grey-text text-lighten-3 right-align">— Tiger Woods.</h5>
+          <h3 class="encabezado" id="color3">“Siempre se puede ser mejor”</h3>
+          <h5 id="color3" class="encabezado  right-align">— Tiger Woods.</h5>
         </div>
       </li>
       <li>
         <img src="assets/child4.jpg"> 
         <div class="caption center-align">
-          <h3 class="encabezado">“Cambia tus pensamientos y cambiarás tu mundo"</h3>
-          <h5 class="encabezado light grey-text text-lighten-3 right-align">— Norman Vincent Peale.</h5>
+          <h3 class="encabezado" id="color4">“Cambia tus pensamientos y cambiarás tu mundo"</h3>
+          <h5 id="color4" class="encabezado right-align">— Norman Vincent Peale.</h5>
         </div>
       </li>
       <li>
         <img src="assets/child5.jpg"> 
         <div class="caption center-align">
-          <h3 class="encabezado">“Tus talentos y habilidades irán mejorando con el tiempo, pero para eso has de empezar”</h3>
-          <h5 class="encabezado light grey-text text-lighten-3 right-align">— Martin Luther King.</h5>
+          <h3 class="encabezado" id="color5">“Tus talentos y habilidades irán mejorando con el tiempo, pero para eso has de empezar”</h3>
+          <h5 id="color5" class="encabezado  right-align">— Martin Luther King.</h5>
         </div>
       </li>
       <li>
         <img src="assets/child6.webp"> 
         <div class="caption center-align">
-          <h3 class="encabezado">“La verdadera educación consiste en obtener lo mejor de uno mismo”</h3>
-          <h5 class="encabezado light grey-text text-lighten-3 right-align">– Mahatma Gandhi.</h5>
+          <h3 class="encabezado" id="color6">“La verdadera educación consiste en obtener lo mejor de uno mismo”</h3>
+          <h5 id="color6" class="encabezado  right-align">– Mahatma Gandhi.</h5>
         </div>
       </li>
     </ul>
@@ -49,8 +49,267 @@
 
   <!-- Fin del slider -->
 
-  <div class="container">  
+  <!-- <div class="container title">  
     <div class="row"> 
         <div class="titulo brown-text center-align hide-on-med-and-down">- ¿QUÉ ES KOKONE LEARN? – </div>
         <div class="titulo2 center-align brown-text hide-on-large-only">- ¿QUÉ ES KOKONE LEARN? –</div>
+    </div> -->
+
+    <div class="container separate">
+        <div class="row center-align">
+          <div class="col l7 m7 s12">
+            <img class="responsive-img" src="assets/logokids.png" alt="">
+          </div>
+          <div class="col l1 m1 s12"></div>
+          <div class="col l4 m4 s12"><img class="responsive-img" src="assets/kokone-saluda.gif" alt="">
+          </div>
+        </div>
+      </div>
+
+    <div class="parallax-container separate">
+        <div class="parallax"><img src="assets/home1.jpg"></div>
+        <div class="nosotros">
+          <h2>Kokone Learn</h2>
+          <p class="hide-on-med-and-down somos">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+               Quia suscipit voluptatum commodi libero esse voluptate ratione harum dolores. 
+               Laboriosam magni nesciunt obcaecati excepturi alias corrupti ducimus quo reiciendis, sequi itaque beatae.
+               Quisquam pariatur beatae ut dolor ipsa minima vel error?
+
+          </p>
+            <div class="textch hide-on-large-only somos">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Rem eos placeat quibusdam reprehenderit culpa cum corporis magnam neque, aliquid qui repellendus quasi ad aliquam, 
+              fuga itaque voluptates nulla eius facilis natus delectus?
+               Rerum quo temporibus suscipit unde nostrum amet magnam.
+            </div>
+        </div>
     </div>
+
+    <div class="container separate">
+        <div class="row center-align">
+          <div class="col l1 m1 s12"></div>
+          <div class="col l4 m4 s12">
+            <img class="responsive-img" src="assets/objetivo.png" alt="">
+            <h2>Vision</h2>
+            <p class="letra1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, voluptas.</p>
+          </div>
+          <div class="col l2 m2 s12"></div>
+          <div class="col l4 m4 s12"><img class="responsive-img"src="assets/contento.png" alt="">
+            <h2>Valores</h2>
+            <p class="letra1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt, sint.</p>
+          </div>
+          <div class="col l1 m1 s12"></div>
+        </div>
+    </div>
+
+    <div class="row container separate">
+      <h2 class="header brown-text center-align">EL MUNDO DE KOKONE LEARN</h2>
+    </div>
+
+    <div class="container grey lighten-5 z-depth-4">
+    
+      <div class="row">
+        <div class="col s12">
+          <ul class="tabs center pink accent-1">
+            <li class="tab col s3"><a class="active white-text" href="#test1">Profesores</a></li>
+            <li class="tab col s3"><a class="white-text" href="#test2">Estudiantes</a></li>
+            <li class="tab col s3"><a class="white-text" href="#test3">Padres</a></li>
+            <li class="tab col s3"><a class="white-text" href="#test4">Herramientas</a></li>
+          </ul>
+        </div>
+      </div>
+        <!-- Contenido de Profesores -->
+        <div id="test1" class="col s12">
+          <div class="row">
+            <div class="col s12 m6 l4">
+             <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="assets/default.png">
+              </div>
+              <div class="card-content center-align">
+                <span class="card-title activator grey-text text-darken-4">Característica 1<i class="material-icons right">more_vert</i></span>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                  <p>Descripción de la característica 1</p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 l4">
+              <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img class="activator" src="assets/default.png">
+                </div>
+                <div class="card-content center-align">
+                  <span class="card-title activator grey-text text-darken-4">Característica 2<i class="material-icons right">more_vert</i></span>
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                    <p>Descripción de la característica 2</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="assets/default.png">
+                  </div>
+                  <div class="card-content center-align">
+                    <span class="card-title activator grey-text text-darken-4">Característica 3<i class="material-icons right">more_vert</i></span>
+                  </div>
+                  <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                      <p>Descripción de la característica 3</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+            <!-- FIN DE PROFESORES -->
+
+        <div id="test2" class="col s12">
+             <!-- CONTENIDO DE ESTUDIANTES -->
+             <div class="row">
+               <div class="col s12 m6 l4">
+                 <div class="card">
+                   <div class="card-image waves-effect waves-block waves-light">
+                     <img class="activator" src="assets/default.png">
+                   </div>
+                   <div class="card-content center-align">
+                     <span class="card-title activator grey-text text-darken-4">Característica 1<i class="material-icons right">more_vert</i></span>
+                   </div>
+                   <div class="card-reveal">
+                     <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                       <p>Descripción de la característica 1</p>
+                     </div>
+                   </div>
+                 </div>
+                 <div class="col s12 m6 l4">
+                   <div class="card">
+                     <div class="card-image waves-effect waves-block waves-light">
+                       <img class="activator" src="assets/default.png">
+                     </div>
+                     <div class="card-content center-align">
+                       <span class="card-title activator grey-text text-darken-4">Característica 2<i class="material-icons right">more_vert</i></span>
+                     </div>
+                     <div class="card-reveal">
+                       <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                         <p>Descripción de la característica 2</p>
+                       </div>
+                     </div>
+                   </div>
+                   <div class="col s12 m6 l4">
+                     <div class="card">
+                       <div class="card-image waves-effect waves-block waves-light">
+                         <img class="activator" src="assets/default.png">
+                       </div>
+                       <div class="card-content center-align">
+                         <span class="card-title activator grey-text text-darken-4">Característica 3<i class="material-icons right">more_vert</i></span>
+                       </div>
+                       <div class="card-reveal">
+                         <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                           <p>Descripción de la característica 3</p>
+                         </div>
+                       </div>
+                     </div>
+             </div> 
+                  <!-- FIN DE ESTUDIANTES -->
+            </div>
+
+
+       <div id="test3" class="col s12">
+         <!-- CONTENIDO PADRES -->
+                  <div class="row">
+                    <div class="col s12 m6 l4">
+                      <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                          <img class="activator" src="assets/default.png">
+                        </div>
+                        <div class="card-content center-align">
+                          <span class="card-title activator grey-text text-darken-4">Característica 1<i class="material-icons right">more_vert</i></span>
+                        </div>
+                        <div class="card-reveal">
+                          <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                            <p>Descripción de la característica 1.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col s12 m6 l4">
+                        <div class="card">
+                          <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/default.png">
+                          </div>
+                          <div class="card-content center-align">
+                            <span class="card-title activator grey-text text-darken-4">Característica 2<i class="material-icons right">more_vert</i></span>
+                          </div>
+                          <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                              <p>Descripción de la característica 2</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col s12 m6 l4">
+                          <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="assets/default.png">
+                            </div>
+                            <div class="card-content center-align">
+                              <span class="card-title activator grey-text text-darken-4">Característica 3<i class="material-icons right">more_vert</i></span>
+                            </div>
+                            <div class="card-reveal">
+                              <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                                <p>Descripción de la característica 3</p>
+                              </div>
+                            </div>
+                          </div>
+                  </div> 
+         <!-- FIN DE PADRES -->
+       </div>
+       <div id="test4" class="col s12">
+         <!-- TAB HERRAMIENTAS -->
+                  <div class="row">
+                    <div class="col s12 m6 l4">
+                      <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                          <img class="activator" src="assets/default.png">
+                        </div>
+                        <div class="card-content center-align">
+                          <span class="card-title activator grey-text text-darken-4">Característica 1<i class="material-icons right">more_vert</i></span>
+                        </div>
+                        <div class="card-reveal">
+                          <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                            <p>Descripción de la característica 1</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col s12 m6 l4">
+                        <div class="card">
+                          <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/default.png">
+                          </div>
+                          <div class="card-content center-align">
+                            <span class="card-title activator grey-text text-darken-4">Característica 2<i class="material-icons right">more_vert</i></span>
+                          </div>
+                          <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                              <p>Descripción de la característica 2</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col s12 m6 l4">
+                          <div class="card">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="assets/default.png">
+                            </div>
+                            <div class="card-content center-align">
+                              <span class="card-title activator grey-text text-darken-4">Característica 3<i class="material-icons right">more_vert</i></span>
+                            </div>
+                            <div class="card-reveal">
+                              <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                                <p>Descripción de la característica 3</p>
+                              </div>
+                            </div>
+                          </div>
+                  </div> 
+         <!-- FIN DE HERRAMIENTAS -->
+      </div>
+  </div>
