--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 
 <!-- Plantilla de navbar responsiva con materialize -->
 <nav class="mb60">
-    <div class="nav-wrapper yellow lighten-2">
+    <div class="nav-wrapper">
         <a href="#" class="brand-logo ">
-            <img src="assets/logokids.png">
+            <img src="assets/logoFormal.png">
         </a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
