--- a/src/app/pages/cursos-alumno/cursos-alumno.component.css
+++ b/src/app/pages/cursos-alumno/cursos-alumno.component.css
@@ -6,6 +6,14 @@ section {
     padding: 100px 0;
 }
 
+
+svg#clouds {
+    position: fixed;
+    bottom: -160px;
+    left: -230px;
+    z-index: -10;
+    width: 1920px;
+}
 .details-card {
     background: #ecf0f1;
 }
