Funcionalidad para agregar cursos,clases,diapositivas del lado del profesor y guardado de datos

--- a/src/app/components/diapositiva/diapositiva.component.html
+++ b/src/app/components/diapositiva/diapositiva.component.html
@@ -43,8 +43,8 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <p>
-    Form Value: {{ form.value.editorTextoName }}
-  </p>
+<div class="container mt30 mb30">
+  <div class="right-align">
+    <a class="waves-effect waves-light btn" (click)="guardarDiapositiva()"><i class="material-icons right">send</i>Agregar diapositiva</a>
+  </div>
 </div>
