--- a/src/app/components/selplantilla/selplantilla.component.html
+++ b/src/app/components/selplantilla/selplantilla.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
         <div class="col s4">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Regresar
+            <button class="btn waves-effect waves-light" name="regresar" (click)="router.navigate(['profesor/cursos/'+cursoID]);">Regresar
                 <i class="material-icons left">keyboard_arrow_left</i>
             </button>
         </div>
@@ -21,7 +21,7 @@
                     <span class="card-title">Card Title</span>
                 </div>
                 <div class="card-action center-align">
-                    <a class="btn blue" [routerLink]="['/agregarDiapositiva']">Seleccionar</a>
+                    <a class="btn blue" (click)="router.navigate(['profesor/cursos/'+cursoID+'/clase/'+claseID+'/agregarDiapositiva/P1']);">Seleccionar</a>
                 </div>
             </div>
         </div>
